--- a/recipefinder/app/views/layouts/application.html.erb
+++ b/recipefinder/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
 
 	    	<%= yield %>
 		   		<footer>
-		   			<p>Powered By Food2Fork.com</p>
+		   			<h3> <p>Powered By Food2Fork.com</p> </h3>
 		   		<footer>
     </body>
 </html>
