--- a/recipefinder/app/views/recipes/index.html.erb
+++ b/recipefinder/app/views/recipes/index.html.erb
@@ -1,21 +1,16 @@
-<h2>Searching for - <%= @search_term %></h2>
+<h3>Searching for - <%= @search_term %></h3>
 
-    <% if (@recipes.nil? or @recipes == []) %>
-      <p> <h2> No recipes were found - Please try again </h2> </p>
-        <% else %>
-
-          <table border="1">
-            <tr>
-            	<th> Image </th>
-            	<th> Name </th>
-            	<th> Social Rank </th>
-            </tr>
-            <% @recipes.each do |recipe| %>
-              <tr class=<%= cycle('even', 'odd') %>>
-                <td><%= link_to(image_tag(recipe["image_url"], height: '100', width: '100'), recipe["source_url"])%></td>
-                <td><%= link_to(sanitize(recipe["title"]), recipe["source_url"]) %></td>
-                <td><%= recipe["social_rank"] %></td>
-              </tr>
-            <% end %>
-          </table>
-    <% end %>
+<table border="1">
+  <tr>
+    <th> Image </th>
+    <th> Title </th>
+    <th> Social Rank </th>
+  </tr>
+  <% @recipes.each do |recipe| %>
+    <tr class=<%= cycle('even', 'odd') %>>
+      <td><%= link_to(image_tag(recipe["image_url"], height: '100', width: '100'), recipe["source_url"]) %></td>
+      <td><%= link_to(sanitize(recipe["title"]), recipe["source_url"]) %></td>
+      <td><%= recipe["social_rank"] %></td>
+    </tr>
+  <% end %>
+</table>
