--- a/recipefinder/app/views/layouts/application.html.erb
+++ b/recipefinder/app/views/layouts/application.html.erb
@@ -6,9 +6,16 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
-<body>
+	<body>
 
-<%= yield %>
+		<header>
+			<h1> WELCOME TO MILICA's RECIPE FINDER APP :) </h1>
+		</header>
 
-</body>
+	<%= yield %>
+
+		<footer> 
+			<p>Powered By Food2Fork.com</p>
+		<footer>
+	</body>
 </html>
