--- a/recipefinder/app/views/layouts/application.html.erb
+++ b/recipefinder/app/views/layouts/application.html.erb
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Recipefinder</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
-
-<%= yield %>
-<p>Powered By Food2Fork.com</p>
-</body>
+	<head>
+	  <title>Recipefinder</title>
+	  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+	  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+	  <%= csrf_meta_tags %>
+	</head>
+	<body>
+	<header> 
+		<div class="container">
+			<h1> WELCOME TO MILICA's RECIPE FINDER APP :) </h1>
+			</header>
+				<%= yield %>
+				<footer>
+				<p>Powered By Food2Fork.com</p>
+				</footer>
+		</div>
+	</body>
 </html>
